disable user selection, and fix z-index of element to dont conflict

--- a/sources/styles/specs/input.scss
+++ b/sources/styles/specs/input.scss
@@ -5,6 +5,7 @@ mn-option {
   line-height: 2.5em;
   display: inline-block;
   max-width: 40%;
+  z-index: 0;
 
   label {
     display: flex;
