--- a/sources/styles/specs/placeholder.scss
+++ b/sources/styles/specs/placeholder.scss
@@ -10,6 +10,7 @@ mn-option {
     padding: 0 1em;
     text-align: center;
     display: inline-block;
+    user-select: none;
   }
 
   &[disabled] {
